Corrected css vertical height problem and scrollbar misconfigs.

--- a/mgr-app-frontend/src/layout.css
+++ b/mgr-app-frontend/src/layout.css
@@ -18,15 +18,25 @@
 	src: url("./fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype");
 }
 
-body, html {
+html {
+	height: 100vh;
+	box-sizing: border-box;
+	
+}
+
+body, #root {
+	height: 100%;
+}
+
+body {
 	margin: 0;
-	overflow: hidden;
+	padding: 0;
+	overflow: auto;
 	color: var(--font-color);
 	font-family: "Source Sans Pro";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 200 900;
-	/* font-family: 'Source Sans Pro', sans-serif; */
 }
 
 .App {
@@ -34,13 +44,12 @@ body, html {
 	height: 100%;
 	width: 100%;
 	z-index: 1;
-	/* background-color: purple; */
 }
 
 .main-container {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	overflow: hidden;
 }
@@ -104,9 +113,8 @@ body, html {
 	background-color: var(--dark-background-color);
 	width: 100%;
 	padding: 10px 30px 10px 30px;
-	height: calc(100vh - var(--header-height));
+	height: calc(100% - var(--header-height));
 	overflow-y: auto;
-	/* border: 1px solid red; */
 }
 
 /* ===================== */
@@ -119,7 +127,7 @@ body, html {
 	display: flex;
 	flex-direction: column;
 	align-content: space-between;
-	height: 100vh;
+	height: 100%;
 	width: var(--sidebar-width);
 	min-width: var(--sidebar-width);
 	background-color: var(--dark-sidebar-color);
@@ -140,7 +148,6 @@ body, html {
 	box-sizing: border-box;
 	margin-top: 10px;
 	white-space: nowrap;
-	/* border: 1px solid brown; */
 }
 
 .site-logo {
@@ -151,7 +158,6 @@ body, html {
 	height: var(--sidebar-li-height);
 	min-width: var(--sidebar-width);
 	cursor: pointer;
-	/* border: 1px solid purple; */
 }
 
 .app-logo {
@@ -170,7 +176,6 @@ body, html {
 	padding: 0px;
 	list-style: none;
 	white-space: nowrap;
-	/* border: 1px solid red; */
 }
 
 .nav-list-container li {
@@ -179,7 +184,6 @@ body, html {
 	height: var(--sidebar-li-height);
 	width: 100%;
 	cursor: pointer;
-	/* border: 1px solid white; */
 }
 
 .nav-list-container li:hover {
@@ -257,7 +261,7 @@ for icon.
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100vh;
+		height: 100%;
 		background: linear-gradient(
 			rgba(0, 0, 0, 0.9), 
 			rgba(0, 0, 0, 0.9)
